--- a/mscartoes/src/main/resources/application.yml
+++ b/mscartoes/src/main/resources/application.yml
@@ -20,3 +20,14 @@ eureka:
 mq:
   queues:
     emissao-cartoes: emissao-cartoes
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+
+logging:
+  file:
+    name: ./logs/log-file.log
+
