--- a/msclientes/src/main/resources/application.yml
+++ b/msclientes/src/main/resources/application.yml
@@ -11,3 +11,6 @@ eureka:
       defaultZone: http://cursoms-eureka-user:senha-super-dificil@10.0.0.105:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring-cloud.application.instance_id:${random.value}}
+logging:
+  file:
+    name: ./logs/log-file.log
