--- a/mscloudgateway/src/main/resources/application.yml
+++ b/mscloudgateway/src/main/resources/application.yml
@@ -21,3 +21,7 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://cursoms-eureka-user:senha-super-dificil@10.0.0.105:8761/eureka
+
+logging:
+  file:
+    name: ./logs/log-file.log
