--- a/msavaliadorcredito/src/main/resources/application.yml
+++ b/msavaliadorcredito/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: msavaliadorcredito
   rabbitmq:
-    host: 10.0.0.109
+    host: ${RABBITMQ_SERVER}
     port: 5672
     username: guest
     password: guest
@@ -13,7 +13,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://cursoms-eureka-user:senha-super-dificil@10.0.0.105:8761/eureka
+      defaultZone: http://admin:admin@${EUREKA_SERVER}:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring-cloud.application.instance_id:${random.value}}
 
