--- a/mscloudgateway/src/main/resources/application.yml
+++ b/mscloudgateway/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://10.0.0.109:8081/realms/mscourserealm
+          issuer-uri: http://${KEYCLOAK_SERVER}:${KEYCLOAK_PORT}/realms/mscourserealm
 server:
   port: 8080
 
@@ -20,7 +20,7 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://cursoms-eureka-user:senha-super-dificil@10.0.0.105:8761/eureka
+      defaultZone: http://admin:admin@${EUREKA_SERVER}:8761/eureka
 
 logging:
   file:
